syntax = "proto3";

package site.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "pagination/v1/pagination.proto";

// 站点服务
service SiteService {
  // 获取站点列表
  rpc List (pagination.PagingRequest) returns (ListSiteResponse) {}

  // 获取站点数据
  rpc Get (GetSiteRequest) returns (Site) {}

  // 创建站点
  rpc Create (CreateSiteRequest) returns (Site) {}

  // 更新站点
  rpc Update (UpdateSiteRequest) returns (Site) {}

  // 删除站点
  rpc Delete (DeleteSiteRequest) returns (google.protobuf.Empty) {}
}

// 站点
message Site {
  // 站点状态
  enum Status {
    SITE_STATUS_UNSPECIFIED = 0;

    SITE_STATUS_ACTIVE = 1;      // 启用
    SITE_STATUS_INACTIVE = 2;    // 禁用
    SITE_STATUS_MAINTENANCE = 3; // 维护中
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "站点ID"}
  ]; // 站点ID

  optional uint32 tenant_id = 2 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ]; // 租户ID

  optional string name = 3 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "站点名称（如'主站'、'博客'）"}
  ]; // 站点名称（如'主站'、'博客'）

  optional string slug = 4 [
    json_name = "slug",
    (gnostic.openapi.v3.property) = {description: "站点标识（如'main'、'blog'）"}
  ]; // 站点标识（如'main'、'blog'）

  optional string domain = 5 [
    json_name = "domain",
    (gnostic.openapi.v3.property) = {description: "主域名（如'www.example.com'）"}
  ]; // 主域名（如'www.example.com'）

  repeated string alternate_domains = 6 [
    json_name = "alternateDomains",
    (gnostic.openapi.v3.property) = {description: "备用域名列表"}
  ]; // 备用域名列表

  optional bool is_default = 7 [
    json_name = "isDefault",
    (gnostic.openapi.v3.property) = {description: "是否为默认站点"}
  ]; // 是否为默认站点

  optional Status status = 8 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "站点状态"}
  ]; // 站点状态

  optional string default_locale = 9 [
    json_name = "defaultLocale",
    (gnostic.openapi.v3.property) = {description: "默认语言（如'zh-CN'、'en-US'）"}
  ]; // 默认语言（如'zh-CN'、'en-US'）

  optional string template = 10 [
    json_name = "template",
    (gnostic.openapi.v3.property) = {description: "站点模板（如'blog'、'portfolio'）"}
  ]; // 站点模板（如'blog'、'portfolio'）

  optional string theme = 11 [
    json_name = "theme",
    (gnostic.openapi.v3.property) = {description: "主题名称"}
  ]; // 主题名称

  optional uint64 visit_count = 12 [
    json_name = "visitCount",
    (gnostic.openapi.v3.property) = {description: "访问次数"}
  ]; // 访问次数


  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 回应 - 站点列表
message ListSiteResponse {
  repeated Site items = 1;
  uint64 total = 2;
}

// 请求 - 站点数据
message GetSiteRequest {
  uint32 id = 1;

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 请求 - 创建站点
message CreateSiteRequest {
  Site data = 1;
}

// 请求 - 更新站点
message UpdateSiteRequest {
  uint32 id = 1;

  Site data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml: "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 请求 - 删除站点
message DeleteSiteRequest {
  uint32 id = 1;
}
